blocage gerer
